--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,6 @@
 <p>header works!</p>
+<ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="contactus">contact</a></li>
+    
+    <li><a class="dropdown-item" href="list">List</a></li>
+  </ul>
